--- a/package.json
+++ b/package.json
@@ -3,23 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.6.0",
-    "@emotion/styled": "^11.6.0",
+    "@bitarray/es6": "^1.0.2",
+    "@chakra-ui/react": "^1.8.7",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@googlemaps/react-wrapper": "^1.1.15",
     "@mui/material": "^5.2.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@tippyjs/react": "^4.2.6",
+    "base62": "^2.0.1",
+    "base64-arraybuffer": "^1.0.2",
+    "bitset": "^5.1.1",
     "echarts": "^5.2.2",
     "echarts-for-react": "3.0.2",
+    "framer-motion": "^3.10.6",
     "normalize.css": "^8.0.1",
+    "prism-react-renderer": "^1.3.1",
     "rc-slider": "^9.7.4",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.1.0",
     "react-data-grid": "^7.0.0-beta.7",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.4.0",
+    "react-is": "^18.2.0",
     "react-popper-tooltip": "^4.3.1",
-    "react-scripts": "4.0.3",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.0",
     "react-switch": "^6.0.0",
     "react-toggle": "^4.1.2",
     "source-map-explorer": "^2.5.2",
