--- a/public/manifest.json
+++ b/public/manifest.json
@@ -19,7 +19,8 @@
     }
   ],
   "start_url": ".",
-  "display": "landscape",
+  "display": "fullscreen",
+  "orientation": "landscape",
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
